--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,14 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# ignore binary
+bin/*
+
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/*
+
+# ignore testscript
+run.sh
+
+# ignore dep files
+Gopkg.*
